<resources>
    <string name="app_name">FoodScanner-client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_scanner_title">Food Scanner</string>
    <string name="create_account"><u>У вас нет аккаунта? Создайте</u></string>
    <string name="login_account"><u>У вас уже есть аккаунт? Войдите</u></string>
    <string name="login_btn_text">Войти</string>
    <string name="password_hint">Пароль</string>
    <string name="email_hint">Почта</string>
    <string name="username_hint">Имя</string>
    <string name="create_account_btn_text">Создать аккаунт</string>
    <string name="next_button">Далее</string>
    <string name="skip_button">Skip</string>
    <string name="choose_allergens_text">Каких из этих аллергенов Вы придерживаетесь?</string>
    <string name="choose_diets_text">Каких из этих диет Вы придерживаетесь?</string>
    <string name="choose_avoidances_text">Избегаете ли Вы что-нибудь из этого?</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Создать аккаунт</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan</string>
    <string name="log_out">Выйти</string>
    <string name="products_bottom_navigation_title">Продукты</string>
    <string name="profile_bottom_navigation_title">Профиль</string>
    <string name="scan_bottom_navigation_title">Скан</string>
    <string name="sign_in_title_main">Вход</string>
    <string name="register_title_main">Регистрация</string>
</resources>