<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#4885ED"
    tools:context=".app.presentation.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_login_layout"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="70dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="#4885ed"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:hintTextColor="#4885ed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTitleTextView"
            app:startIconDrawable="@drawable/icon_email"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint"
                android:inputType="text"
                android:fontFamily="@font/open_sans_light"
                android:textSize="18sp"
                android:lines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameContainer"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="4sp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="#4885ed"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:endIconTint="@color/white"
            app:hintTextColor="#4885ed"
            app:startIconDrawable="@drawable/icon_person"
            app:layout_constraintEnd_toEndOf="@id/emailContainer"
            app:layout_constraintStart_toStartOf="@id/emailContainer"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username_hint"
                android:fontFamily="@font/open_sans_light"
                android:textSize="18sp"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="4sp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="#4885ed"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintTextColor="#4885ed"
            app:startIconDrawable="@drawable/icon_lock"
            app:layout_constraintEnd_toEndOf="@id/usernameContainer"
            app:layout_constraintStart_toStartOf="@id/usernameContainer"
            app:layout_constraintTop_toBottomOf="@id/usernameContainer"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans_light"
                android:textSize="18sp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20sp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:fontFamily="@font/open_sans_medium"
            app:backgroundTint="#4885ed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/login_account"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="@+id/registerButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>